[Modified] OC-323 #comment minor changes #time 2h

--- a/src/frontend/app/themes/default/content/schedules/schedules.scss
+++ b/src/frontend/app/themes/default/content/schedules/schedules.scss
@@ -82,6 +82,7 @@
 }
 
 .schedule_list_status{
+  height: 49.5px;
   display: table-cell;
   transition: all 0.5s;
   vertical-align: middle !important;
