--- a/src/frontend/app/themes/default/general/basic_components.scss
+++ b/src/frontend/app/themes/default/general/basic_components.scss
@@ -336,7 +336,7 @@
   font-family: $FONT_FAMILY;
   margin: 0 !important;
   min-height: 0 !important;
-  text-align: left !important;
+  text-align: center;
   >div {
     height: 22px;
     width: 22px;
