--- a/src/frontend/app/themes/default/general/list_of_components.scss
+++ b/src/frontend/app/themes/default/general/list_of_components.scss
@@ -264,6 +264,21 @@
   top:1px;
 }
 
+.button_delete_loading{
+  margin-top: 0;
+  text-align: right;
+  min-height: 20px;
+  margin-left: auto;
+  &>div{
+    width: 18px;
+    height: 18px;
+  }
+}
+.only_button_delete_loading{
+  @extend .button_delete_loading;
+  margin-left: 0;
+}
+
 .button_delete{
   font-family: $FONT_FAMILY;
   color: $ERROR_COLOR;
@@ -364,6 +379,7 @@
 
 .empty_list{
   @extend .card_style;
+  padding: 1vw;
   font-family: $FONT_FAMILY;
   font-size: $FONT_SIZE_SMALL;
   display: block;
