[Modified] OC-369 #comment implemented saving view settings in local storage #time 4h

--- a/src/frontend/app/themes/default/layout/notification.scss
+++ b/src/frontend/app/themes/default/layout/notification.scss
@@ -20,9 +20,11 @@
     font-family: $FONT_FAMILY;
   }
   .close_icon{
-    position: absolute;
-    right: 9px;
-    top: 5px;
+    position: sticky;
+    float: right;
+    z-index: 1;
+    background: white;
+    border-radius: 50px;
   }
   .actions{
     position: relative;
