--- a/src/frontend/app/themes/default/layout/notification.scss
+++ b/src/frontend/app/themes/default/layout/notification.scss
@@ -21,6 +21,8 @@
   }
   .close_icon{
     position: sticky;
+    right: 0;
+    top: 0;
     float: right;
     z-index: 1;
     background: white;
