[Modified] OC-374 #comment changed notification messages with details #time 10h

--- a/src/frontend/app/themes/default/layout/notification.scss
+++ b/src/frontend/app/themes/default/layout/notification.scss
@@ -139,3 +139,15 @@
     border-radius: 50px;
   }
 }
+
+.emphasize{
+  font-weight: 600;
+}
+.link{
+  @extend .emphasize;
+  color: $TURQUOISE_COLOR;
+  cursor: pointer;
+  &:hover{
+    text-decoration: underline;
+  }
+}
