--- a/src/frontend/app/themes/default/general/form_component.scss
+++ b/src/frontend/app/themes/default/general/form_component.scss
@@ -135,3 +135,15 @@
     height: 15px;
   }
 }
+
+.form_methods_icons{
+  width: 400px;
+  height: 50px;
+  position: absolute;
+  top: 0;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  text-align: center;
+}
