[Modified] OC-380 #comment changed hint style in System Overview #time 30m

--- a/src/frontend/app/themes/default/content/update_assistant/main.scss
+++ b/src/frontend/app/themes/default/content/update_assistant/main.scss
@@ -32,7 +32,11 @@
 }
 
 .system_overview{
-  margin-top: 20px;
+  text-align: left;
+  font-size: 16px;
+  padding-left: 0;
+  bottom: 20px;
+  position: absolute;
   @extend .finish_update;
 }
 
