[Modified] OC-160 #comment minor styles improvements #time 1h

--- a/src/frontend/app/themes/default/general/form_methods.scss
+++ b/src/frontend/app/themes/default/general/form_methods.scss
@@ -1028,6 +1028,7 @@
   position: absolute;
   max-height: 500px;
   overflow: hidden auto;
+  min-height: 100px;
 }
 .method_body_no_placeholder{
   @extend .method_body;
