[Modified] OC-382 #comment redesigned login page #time 4h

--- a/src/frontend/app/themes/default/constants.scss
+++ b/src/frontend/app/themes/default/constants.scss
@@ -12,6 +12,8 @@
  * You should have received a copy of the GNU General Public License
  * along with this program. If not, see <http://www.gnu.org/licenses/>.
  */
+
+$NAVIGATION_WIDTH: 95px;
 $BACKGROUND_CALLOUT: #fff;
 $BACKGROUND_MENU_COLOR: #012E55;
 $TURQUOISE_COLOR: #00ACC2;
