--- a/src/frontend/app/themes/default/content/dashboard/dashboard.scss
+++ b/src/frontend/app/themes/default/content/dashboard/dashboard.scss
@@ -28,13 +28,13 @@
 }
 
 .monitoring_boards{
+  @extend .card_style;
   height: calc(100% - 55px);
-  margin-top: 20px;
   max-width: 100%;
   iframe{
     border: none;
     width: 100%;
-    height: 100% !important;
+    height: calc(100% - 30px) !important;
   }
 }
 
@@ -87,6 +87,7 @@
   border: 1px solid #eee;
   border-radius: 4px;
   padding: 10px;
+  min-height: 430px;
 }
 .dashboard_widget_item_edit_on{
   cursor: move !important;
