--- a/src/frontend/app/themes/default/general/icons.scss
+++ b/src/frontend/app/themes/default/general/icons.scss
@@ -153,7 +153,7 @@
   img{
     transition: width 0.5s;
     transition-delay: 0.3s;
-    width: 60px;
+    width: 3rem;
     cursor: pointer;
   }
   div{
@@ -170,8 +170,8 @@
 }
 .rotate{
   img{
-    transform-origin: 25px 25px;
-    transform: rotate(60deg);
-    transition: transform 0.3s;
+    transform-origin: 20px 20px;
+    transform: rotate(63deg);
+    transition: transform 0.8s;
   }
 }
