[Modified] OC-160 #comment minor changes  #time 1h

--- a/src/frontend/app/themes/default/content/connections/connection_overview_2.scss
+++ b/src/frontend/app/themes/default/content/connections/connection_overview_2.scss
@@ -510,7 +510,7 @@ $HIGHLIGHT_COLOR: #8a9dd7;
   font-size: $FONT_SIZE_MEDIUM;
 }
 .response_toggle_icon{
-  vertical-align: text-top;
+  vertical-align: middle;
   cursor: pointer;
 }
 .description{
