--- a/src/frontend/app/themes/default/general/basic_components.scss
+++ b/src/frontend/app/themes/default/general/basic_components.scss
@@ -422,6 +422,9 @@
 .input_error{
   position: absolute;
 }
+.input_errored{
+  padding-bottom: 20px !important;
+}
 
 .input_loading{
   margin: 0 !important;
