[Modified] OC-406 #comment added update subscription component #time 6h

--- a/src/frontend/app/themes/default/general/form_component.scss
+++ b/src/frontend/app/themes/default/general/form_component.scss
@@ -147,3 +147,13 @@
   right: 0;
   text-align: center;
 }
+
+
+.hint_area{
+  font-size: 16px;
+  padding-left: 65px;
+  margin-top: 50px;
+  .hint{
+    font-weight: bold;
+  }
+}
