[Fixed] OC-424 #comment fixed notification #time 1h

--- a/src/frontend/app/themes/default/general/list_of_components.scss
+++ b/src/frontend/app/themes/default/general/list_of_components.scss
@@ -226,7 +226,7 @@
   float: right;
   transform-origin: 90% 25%;
   transition: all 0.1s;
-  width: 70%;
+  width: 60px;
   display: flex;
   justify-content: center;
 }
