[Modified] OC-416 #comment integrated graphiql #time 16h

--- a/src/frontend/app/themes/default/content/connections/connection_overview_2.scss
+++ b/src/frontend/app/themes/default/content/connections/connection_overview_2.scss
@@ -642,6 +642,11 @@ $HIGHLIGHT_COLOR: #8a9dd7;
   max-width: 45vw;
   width: 45vw;
 }
+.body_dialog_graphql{
+  min-width: 90vw;
+  max-width: 90vw;
+  width: 90vw;
+}
 .body_dialog_with_enhancement{
   min-width: 90vw;
   max-width: 90vw;
