[Modified] OC-416 #comment adjustment with server #time 2h

--- a/src/frontend/app/themes/default/general/form_methods.scss
+++ b/src/frontend/app/themes/default/general/form_methods.scss
@@ -820,7 +820,8 @@
 }
 
 .param_input_dropdown{
-  top: 62px !important;
+  top: 60px !important;
+  max-width: 250px !important;
 }
 
 .param_generator_param{
