[Fixed] OC-430 #comment fixed select search #time 2h

--- a/src/frontend/app/themes/default/layout/header.scss
+++ b/src/frontend/app/themes/default/layout/header.scss
@@ -198,11 +198,12 @@
   }
 
   100% {
-    top: 0;
+    top: 22px;
     opacity: 0;
   }
 }
 .callout {
+  z-index: 1000000;
   animation-delay: 2.5s;
   animation-name: slideTopRight;
   animation-duration: 0.5s;
@@ -217,9 +218,9 @@
     margin-top: -4px;
     font-size: 12px;
   }
-  position: absolute;
-  top: 12px;
-  left: -170px;
+  position: fixed;
+  right: 8px;
+  top: 34px;
   height: 50px;
   width: 200px;
   color: black;
