--- a/src/frontend/src/components/connection/themes/default/content/connections/change.scss
+++ b/src/frontend/src/components/connection/themes/default/content/connections/change.scss
@@ -13,23 +13,6 @@
  * along with this program. If not, see <http://www.gnu.org/licenses/>.
  */
 
-/*!
- *
- *  * Copyright (C) <2022>  <becon GmbH>
- *  *
- *  * This program is free software: you can redistribute it and/or modify
- *  * it under the terms of the GNU General Public License as published by
- *  * the Free Software Foundation, version 3 of the License.
- *  * This program is distributed in the hope that it will be useful,
- *  * but WITHOUT ANY WARRANTY; without even the implied warranty of
- *  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
- *  * GNU General Public License for more details.
- *  *
- *  * You should have received a copy of the GNU General Public License
- *  * along with this program. If not, see <http://www.gnu.org/licenses/>.
- * /
- */
-
 .methods_form{
   grid-column-start: 1;
   /* autoprefixer: off */
@@ -41,6 +24,11 @@
   min-height: 100vh !important;
   box-shadow: none !important;
   margin-bottom: 100px;
+  padding-right: 10px !important;
+}
+
+.mode_form{
+  padding-right: 10px !important;
 }
 
 .direction_form{
