--- a/src/frontend/src/components/connection/themes/default/general/form_component.scss
+++ b/src/frontend/src/components/connection/themes/default/general/form_component.scss
@@ -13,23 +13,6 @@
  * along with this program. If not, see <http://www.gnu.org/licenses/>.
  */
 
-/*!
- *
- *  * Copyright (C) <2022>  <becon GmbH>
- *  *
- *  * This program is free software: you can redistribute it and/or modify
- *  * it under the terms of the GNU General Public License as published by
- *  * the Free Software Foundation, version 3 of the License.
- *  * This program is distributed in the hope that it will be useful,
- *  * but WITHOUT ANY WARRANTY; without even the implied warranty of
- *  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
- *  * GNU General Public License for more details.
- *  *
- *  * You should have received a copy of the GNU General Public License
- *  * along with this program. If not, see <http://www.gnu.org/licenses/>.
- * /
- */
-
 @import "../constants";
 .buttons_panel{
   margin: 20px 0 30px;
@@ -55,7 +38,7 @@
 .form{
   @extend .card_style;
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-  padding: 50px 10px 10px;
+  padding: 50px 30px 10px 10px;
   margin: 21px 0 0;
   position: relative;
   >div:not(:last-child){
