[Modified] OC-449 #comment improved notification template, connection editor, dashboard widgets #time 4h

--- a/src/frontend/src/components/connection/themes/default/content/connections/connection_overview_2.scss
+++ b/src/frontend/src/components/connection/themes/default/content/connections/connection_overview_2.scss
@@ -800,3 +800,10 @@ $HIGHLIGHT_COLOR: #8a9dd7;
   stroke: #00acc2 !important;
   stroke-width: 2px;
 }
+
+.svg_description_xml_body{
+  padding: 20px 5px 5px !important;
+  position: inherit !important;
+  box-shadow: none !important;
+  margin: 8px !important;
+}
