--- a/src/frontend/src/components/connection/themes/default/general/basic_components.scss
+++ b/src/frontend/src/components/connection/themes/default/general/basic_components.scss
@@ -434,6 +434,7 @@
   height: 38px;
   padding-left: 5px !important;
   margin-top: 0 !important;
+  border-bottom: 1px solid #2121211f !important;
 }
 .input_input_element:focus:not([disabled]):not([readonly]) ~ .input_icon{
   color: $INPUT_SELECT_COLOR !important;
@@ -835,7 +836,7 @@
   min-width: 250px;
   max-width: 250px;
   right: 0;
-  z-index: 100;
+  z-index: 10000;
   animation: APopupInputAppear .25s;
   position: absolute;
   transition: all 0.3s ease 0s;
