[Modified] OC-449 #comment improved technical and business layouts #time 1h

--- a/src/frontend/src/components/connection/themes/default/content/connections/connection_overview_2.scss
+++ b/src/frontend/src/components/connection/themes/default/content/connections/connection_overview_2.scss
@@ -436,6 +436,7 @@ $HIGHLIGHT_COLOR: #8a9dd7;
   }
 }
 .settings_panel_title{
+  top: 0;
   width: 100%;
   text-align: center;
   font-size: $FONT_SIZE_14;
