[Modified] OC-449 #comment improved design of conversion icon #time 15m

--- a/src/frontend/src/components/connection/themes/default/general/form_methods.scss
+++ b/src/frontend/src/components/connection/themes/default/general/form_methods.scss
@@ -16,6 +16,11 @@
 
 @import '../constants';
 
+.conversion_icon{
+  position: absolute;
+  right: 3px;
+}
+
 .item{
   display: block !important;
   font-family: $FONT_FAMILY;
