--- a/src/frontend/src/entities/connection/components/themes/default/general/form_methods.scss
+++ b/src/frontend/src/entities/connection/components/themes/default/general/form_methods.scss
@@ -927,13 +927,14 @@
   animation: APopupInputAppear .25s;
   transition: all 0.3s ease 0s;
   position: absolute;
-  width: 300px;
+  width: 500px;
   float: right;
   background: white;
   box-shadow: rgba(0, 0, 0, 0.14) 0 0 0 0, rgb(159, 159, 159) 0 1px 7px 1px, rgba(0, 0, 0, 0.22) 0 1px 1px 0;
   border-radius: 3px;
   padding: 8px;
   top: 0;
+  height: 57.6px;
 }
 .if_placeholder{
   width: 85%;
@@ -1137,4 +1138,7 @@
 .span_reference_selected{
   border: 2px solid #a4a4a4;
   padding: 1px;
+}
+.param_input_right{
+  border-bottom: 1px solid #2121211f !important;
 }
