--- a/src/frontend/src/styles/css/fonts.css
+++ b/src/frontend/src/styles/css/fonts.css
@@ -1,82 +1,3 @@
-/* roboto-300 - latin */
-@font-face {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 300;
-    src: url('../fonts/roboto/roboto-v29-latin-300.eot'); /* IE9 Compat Modes */
-    src: local(''),
-    url('../fonts/roboto/roboto-v29-latin-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-    url('../fonts/roboto/roboto-v29-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
-    url('../fonts/roboto/roboto-v29-latin-300.woff') format('woff'), /* Modern Browsers */
-    url('../fonts/roboto/roboto-v29-latin-300.ttf') format('truetype'), /* Safari, Android, iOS */
-    url('../fonts/roboto/roboto-v29-latin-300.svg#Roboto') format('svg'); /* Legacy iOS */
-}
-/* roboto-300italic - latin */
-@font-face {
-    font-family: 'Roboto';
-    font-style: italic;
-    font-weight: 300;
-    src: url('../fonts/roboto/roboto-v29-latin-300italic.eot'); /* IE9 Compat Modes */
-    src: local(''),
-    url('../fonts/roboto/roboto-v29-latin-300italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-    url('../fonts/roboto/roboto-v29-latin-300italic.woff2') format('woff2'), /* Super Modern Browsers */
-    url('../fonts/roboto/roboto-v29-latin-300italic.woff') format('woff'), /* Modern Browsers */
-    url('../fonts/roboto/roboto-v29-latin-300italic.ttf') format('truetype'), /* Safari, Android, iOS */
-    url('../fonts/roboto/roboto-v29-latin-300italic.svg#Roboto') format('svg'); /* Legacy iOS */
-}
-/* roboto-regular - latin */
-@font-face {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 400;
-    src: url('../fonts/roboto/roboto-v29-latin-regular.eot'); /* IE9 Compat Modes */
-    src: local(''),
-    url('../fonts/roboto/roboto-v29-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-    url('../fonts/roboto/roboto-v29-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-    url('../fonts/roboto/roboto-v29-latin-regular.woff') format('woff'), /* Modern Browsers */
-    url('../fonts/roboto/roboto-v29-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-    url('../fonts/roboto/roboto-v29-latin-regular.svg#Roboto') format('svg'); /* Legacy iOS */
-}
-/* roboto-italic - latin */
-@font-face {
-    font-family: 'Roboto';
-    font-style: italic;
-    font-weight: 400;
-    src: url('../fonts/roboto/roboto-v29-latin-italic.eot'); /* IE9 Compat Modes */
-    src: local(''),
-    url('../fonts/roboto/roboto-v29-latin-italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-    url('../fonts/roboto/roboto-v29-latin-italic.woff2') format('woff2'), /* Super Modern Browsers */
-    url('../fonts/roboto/roboto-v29-latin-italic.woff') format('woff'), /* Modern Browsers */
-    url('../fonts/roboto/roboto-v29-latin-italic.ttf') format('truetype'), /* Safari, Android, iOS */
-    url('../fonts/roboto/roboto-v29-latin-italic.svg#Roboto') format('svg'); /* Legacy iOS */
-}
-/* roboto-500italic - latin */
-@font-face {
-    font-family: 'Roboto';
-    font-style: italic;
-    font-weight: 500;
-    src: url('../fonts/roboto/roboto-v29-latin-500italic.eot'); /* IE9 Compat Modes */
-    src: local(''),
-    url('../fonts/roboto/roboto-v29-latin-500italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-    url('../fonts/roboto/roboto-v29-latin-500italic.woff2') format('woff2'), /* Super Modern Browsers */
-    url('../fonts/roboto/roboto-v29-latin-500italic.woff') format('woff'), /* Modern Browsers */
-    url('../fonts/roboto/roboto-v29-latin-500italic.ttf') format('truetype'), /* Safari, Android, iOS */
-    url('../fonts/roboto/roboto-v29-latin-500italic.svg#Roboto') format('svg'); /* Legacy iOS */
-}
-/* roboto-500 - latin */
-@font-face {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 500;
-    src: url('../fonts/roboto/roboto-v29-latin-500.eot'); /* IE9 Compat Modes */
-    src: local(''),
-    url('../fonts/roboto/roboto-v29-latin-500.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-    url('../fonts/roboto/roboto-v29-latin-500.woff2') format('woff2'), /* Super Modern Browsers */
-    url('../fonts/roboto/roboto-v29-latin-500.woff') format('woff'), /* Modern Browsers */
-    url('../fonts/roboto/roboto-v29-latin-500.ttf') format('truetype'), /* Safari, Android, iOS */
-    url('../fonts/roboto/roboto-v29-latin-500.svg#Roboto') format('svg'); /* Legacy iOS */
-}
-
 /* fallback */
 @font-face {
     font-family: 'Material Icons';
@@ -134,76 +55,71 @@
     font-family: 'Open Sans';
     font-style: normal;
     font-weight: 400;
-    src: url('../fonts/open_sans/open-sans-v28-latin-regular.eot'); /* IE9 Compat Modes */
     src: local(''),
-    url('../fonts/open_sans/open-sans-v28-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-    url('../fonts/open_sans/open-sans-v28-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-    url('../fonts/open_sans/open-sans-v28-latin-regular.woff') format('woff'), /* Modern Browsers */
-    url('../fonts/open_sans/open-sans-v28-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-    url('../fonts/open_sans/open-sans-v28-latin-regular.svg#OpenSans') format('svg'); /* Legacy iOS */
+    url('../fonts/open_sans/open-sans-v29-latin-regular.woff') format('woff'), /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+url('../fonts/open_sans/open-sans-v29-latin-regular.woff2') format('woff2'); /* Chrome 26+, Opera 23+, Firefox 39+ */
 }
 /* open-sans-600 - latin */
 @font-face {
     font-family: 'Open Sans';
     font-style: normal;
     font-weight: 600;
-    src: url('../fonts/open_sans/open-sans-v28-latin-600.eot'); /* IE9 Compat Modes */
     src: local(''),
-    url('../fonts/open_sans/open-sans-v28-latin-600.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-    url('../fonts/open_sans/open-sans-v28-latin-600.woff2') format('woff2'), /* Super Modern Browsers */
-    url('../fonts/open_sans/open-sans-v28-latin-600.woff') format('woff'), /* Modern Browsers */
-    url('../fonts/open_sans/open-sans-v28-latin-600.ttf') format('truetype'), /* Safari, Android, iOS */
-    url('../fonts/open_sans/open-sans-v28-latin-600.svg#OpenSans') format('svg'); /* Legacy iOS */
-}
-/* open-sans-700 - latin */
-@font-face {
-    font-family: 'Open Sans';
-    font-style: normal;
-    font-weight: 700;
-    src: url('../fonts/open_sans/open-sans-v28-latin-700.eot'); /* IE9 Compat Modes */
-    src: local(''),
-    url('../fonts/open_sans/open-sans-v28-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-    url('../fonts/open_sans/open-sans-v28-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
-    url('../fonts/open_sans/open-sans-v28-latin-700.woff') format('woff'), /* Modern Browsers */
-    url('../fonts/open_sans/open-sans-v28-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
-    url('../fonts/open_sans/open-sans-v28-latin-700.svg#OpenSans') format('svg'); /* Legacy iOS */
+    url('../fonts/open_sans/open-sans-v29-latin-600.woff') format('woff'), /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+url('../fonts/open_sans/open-sans-v29-latin-600.woff2') format('woff2'); /* Chrome 26+, Opera 23+, Firefox 39+ */
 }
 /* open-sans-italic - latin */
 @font-face {
     font-family: 'Open Sans';
     font-style: italic;
     font-weight: 400;
-    src: url('../fonts/open_sans/open-sans-v28-latin-italic.eot'); /* IE9 Compat Modes */
     src: local(''),
-    url('../fonts/open_sans/open-sans-v28-latin-italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-    url('../fonts/open_sans/open-sans-v28-latin-italic.woff2') format('woff2'), /* Super Modern Browsers */
-    url('../fonts/open_sans/open-sans-v28-latin-italic.woff') format('woff'), /* Modern Browsers */
-    url('../fonts/open_sans/open-sans-v28-latin-italic.ttf') format('truetype'), /* Safari, Android, iOS */
-    url('../fonts/open_sans/open-sans-v28-latin-italic.svg#OpenSans') format('svg'); /* Legacy iOS */
+    url('../fonts/open_sans/open-sans-v29-latin-italic.woff') format('woff'), /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+url('../fonts/open_sans/open-sans-v29-latin-italic.woff2') format('woff2'); /* Chrome 26+, Opera 23+, Firefox 39+ */
 }
 /* open-sans-600italic - latin */
 @font-face {
     font-family: 'Open Sans';
     font-style: italic;
     font-weight: 600;
-    src: url('../fonts/open_sans/open-sans-v28-latin-600italic.eot'); /* IE9 Compat Modes */
     src: local(''),
-    url('../fonts/open_sans/open-sans-v28-latin-600italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-    url('../fonts/open_sans/open-sans-v28-latin-600italic.woff2') format('woff2'), /* Super Modern Browsers */
-    url('../fonts/open_sans/open-sans-v28-latin-600italic.woff') format('woff'), /* Modern Browsers */
-    url('../fonts/open_sans/open-sans-v28-latin-600italic.ttf') format('truetype'), /* Safari, Android, iOS */
-    url('../fonts/open_sans/open-sans-v28-latin-600italic.svg#OpenSans') format('svg'); /* Legacy iOS */
+    url('../fonts/open_sans/open-sans-v29-latin-600italic.woff') format('woff'), /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+url('../fonts/open_sans/open-sans-v29-latin-600italic.woff2') format('woff2'); /* Chrome 26+, Opera 23+, Firefox 39+ */
 }
-/* open-sans-700italic - latin */
+
+/* roboto-regular - latin */
 @font-face {
-    font-family: 'Open Sans';
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    src: local(''),
+    url('../fonts/roboto/roboto-v30-latin-regular.woff') format('woff'), /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+url('../fonts/roboto/roboto-v30-latin-regular.woff2') format('woff2'); /* Chrome 26+, Opera 23+, Firefox 39+ */
+}
+/* roboto-italic - latin */
+@font-face {
+    font-family: 'Roboto';
+    font-style: italic;
+    font-weight: 400;
+    src: local(''),
+    url('../fonts/roboto/roboto-v30-latin-italic.woff') format('woff'), /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+url('../fonts/roboto/roboto-v30-latin-italic.woff2') format('woff2'); /* Chrome 26+, Opera 23+, Firefox 39+ */
+}
+/* roboto-700 - latin */
+@font-face {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    src: local(''),
+    url('../fonts/roboto/roboto-v30-latin-700.woff') format('woff'), /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+url('../fonts/roboto/roboto-v30-latin-700.woff2') format('woff2'); /* Chrome 26+, Opera 23+, Firefox 39+ */
+}
+/* roboto-700italic - latin */
+@font-face {
+    font-family: 'Roboto';
     font-style: italic;
     font-weight: 700;
-    src: url('../fonts/open_sans/open-sans-v28-latin-700italic.eot'); /* IE9 Compat Modes */
     src: local(''),
-    url('../fonts/open_sans/open-sans-v28-latin-700italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-    url('../fonts/open_sans/open-sans-v28-latin-700italic.woff2') format('woff2'), /* Super Modern Browsers */
-    url('../fonts/open_sans/open-sans-v28-latin-700italic.woff') format('woff'), /* Modern Browsers */
-    url('../fonts/open_sans/open-sans-v28-latin-700italic.ttf') format('truetype'), /* Safari, Android, iOS */
-    url('../fonts/open_sans/open-sans-v28-latin-700italic.svg#OpenSans') format('svg'); /* Legacy iOS */
+    url('../fonts/roboto/roboto-v30-latin-700italic.woff') format('woff'), /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+url('../fonts/roboto/roboto-v30-latin-700italic.woff2') format('woff2'); /* Chrome 26+, Opera 23+, Firefox 39+ */
 }
