[Modified] OC-314 #comment improved placeholders for dragging #time 4h

--- a/src/frontend/src/entities/connection/components/themes/default/content/connections/connection_overview_2.scss
+++ b/src/frontend/src/entities/connection/components/themes/default/content/connections/connection_overview_2.scss
@@ -839,6 +839,7 @@ $HIGHLIGHT_COLOR: #8a9dd7;
 
 .operator_placeholder_leave{
   fill: #fff !important;
+  stroke: #5d5b5b !important;
   stroke-width: 2px;
 }
 
