[Modified] OC-314 #comment checking referencies before moving #time 4h

--- a/src/frontend/src/entities/connection/components/themes/default/general/form_methods.scss
+++ b/src/frontend/src/entities/connection/components/themes/default/general/form_methods.scss
@@ -16,8 +16,8 @@
 @import '../constants';
 
 .conversion_icon{
-  position: absolute;
-  right: 3px;
+  position: absolute !important;
+  right: 3px !important;
 }
 
 .item{
