[Added] OC-584 #changing the fields in the details panel for methods and operators, added an outline around the active element in the animation #time 8d

--- a/src/frontend/src/entities/connection/components/themes/default/content/connections/connection_overview_2.scss
+++ b/src/frontend/src/entities/connection/components/themes/default/content/connections/connection_overview_2.scss
@@ -549,6 +549,7 @@ $DASHED_COLOR: #58854d;
   }
   .row {
     margin: 0 !important;
+    position: relative;
   }
   .col {
     font-family: $FONT_FAMILY;
